--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sssf-project",
   "version": "1.0.0",
-  "description": "The web application I propose is a platform for selling barrels of beer to customers. The application is targeted towards craft beer enthusiasts and event planners who are looking to purchase beer in bulk for their parties and events.",
+  "description": "The web application I propose is a platform for selling barrels of beer to customers.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,21 +10,50 @@
   "author": "Jindrich Dolezal",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^18.15.13",
-    "apollo-server-core": "^3.12.0",
-    "apollo-server-express": "^3.12.0",
+    "@apollo/server": "^4.5.0",
+    "@graphql-tools/load-files": "^6.6.1",
+    "@graphql-tools/merge": "^8.4.0",
+    "@graphql-tools/schema": "^9.0.17",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.3",
     "graphql": "^16.6.0",
-    "mongoose": "^7.0.4",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "graphql-rate-limit": "^3.3.0",
+    "graphql-shield": "^7.6.5",
+    "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.2",
+    "morgan": "^1.10.0",
+    "randomstring": "^1.2.3"
   },
   "devDependencies": {
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.7"
+    "@types/apidoc": "^0.50.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/geojson": "^7946.0.10",
+    "@types/jest": "^29.2.6",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^18.11.18",
+    "@types/randomstring": "^1.1.8",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "chalk": "^5.2.0",
+    "copyfiles": "^2.4.1",
+    "eslint": "^8.32.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "expect": "^29.4.1",
+    "gts": "^3.1.1",
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
