--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "sssf-project",
   "version": "1.0.0",
   "description": "The web application I propose is a platform for selling barrels of beer to customers.",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/src/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc",
+    "copyGraphql": "copyfiles --error src/api/schemas/*.graphql dist",
+    "postbuild": "npm run copyGraphql",
+    "lint": "eslint --fix src test",
+    "test": "jest --detectOpenHandles --forceExit"
   },
   "keywords": [],
   "author": "Jindrich Dolezal",
@@ -49,7 +55,7 @@
     "eslint-plugin-import": "^2.27.5",
     "expect": "^29.4.1",
     "gts": "^3.1.1",
-    "jest": "^29.3.1",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
