--- a/.github/workflows/main_take-a-beer-be.yml
+++ b/.github/workflows/main_take-a-beer-be.yml
@@ -51,11 +51,24 @@ jobs:
         with:
           name: node-app
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'take-a-beer-be'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_4351AD3DE2F141E0B9382FE38BD632C8 }}
-          package: .
+      - deploy:
+          runs-on: ubuntu-latest
+          needs: build
+          environment:
+            name: 'Production'
+            url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+          steps:
+            - name: Download artifact from build job
+              uses: actions/download-artifact@v2
+              with:
+                name: node-app
+
+            - name: 'Deploy to Azure Web App'
+              id: deploy-to-webapp
+              uses: azure/webapps-deploy@v2
+              with:
+                app-name: 'SSSF-Week5'
+                slot-name: 'Production'
+                publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D3AF1A7F4E2445A69C6E5D4C7370CD0F }}
+                package: .
