--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "test": "jest --detectOpenHandles --forceExit"
   },
   "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/w3cj/express-api-starter.git"
+  },
   "author": "Jindrich Dolezal",
   "license": "ISC",
   "dependencies": {
